syntax = "proto3";

option go_package = "api/";

import "google/protobuf/timestamp.proto";

service EventService {
  rpc SelectEvents(Void) returns (Events) {}
  rpc CreateEvent(Event) returns (Void) {}
  rpc UpdateEvent(Event) returns (Void) {}
  rpc DeleteEvent(Event) returns (Void) {}

  rpc SelectEventsForDay(DateRequest) returns (Events) {}
  rpc SelectEventsForWeek(DateRequest) returns (Events) {}
  rpc SelectEventsForMonth(DateRequest) returns (Events) {}
}

service UserService {
  rpc SelectUsers(Void) returns (Users) {}
  rpc CreateUser(User) returns (Void) {}
  rpc DeleteUser(User) returns (Void) {}
}

message Void {}

message User {
  string ID = 1;
  string FirstName = 2;
  string LastName = 3;
  string Email = 4;
  int64 Age = 5;
}

message Event {
  string ID = 1;
  string Title = 2;
  string Description = 3;
  google.protobuf.Timestamp BeginningT = 4;
  google.protobuf.Timestamp FinishT = 5;
  google.protobuf.Timestamp NotificationT = 6;
  string UserID = 7;
}

message DateRequest {
  google.protobuf.Timestamp Date = 1;
}

message Events {
  repeated Event events = 1;
}

message Users {
  repeated User users = 1;
}
